2005-07-02 arne

	* windows: CFrame uses a backbuffer now when USE_ALPHA_BLEND is on. This fixes a performance issue with some graphic cards.
				The drawback at the moment is, that drawing can only occur when the CFrame calls the views to draw. You can not draw anymore
				by creating your own drawcontext.

2005-06-25 arne

	* adding keyboard focus navigation
	* add bool bWantsFocus to CView. If this is set the view is included in keyboard focus navigation.

2005-06-24 arne

	* merge newframe back to main
	* fixed some gcc warnings

2005-05-13 arne

	* quartz: if the CFrame is embedded into a window composited window, the setSize(..) method does not resize the window anymore.
	* quartz: some window compositing fixes
	* the tabs in a CTabView can be aligned
	* mac os x: quartz will be used per default now

2005-05-05 arne

	* added CBitmap::setNoAlpha(..) and CBitmap::getNoAlpha(). You can set this for PNG images which don't have an alpha channel to speed up drawing on windows.
	* quartz: some window compositing fixes

2005-04-30 arne

	* windows: with libpng, when a bmp image was loaded, don't use AlphaBlend instead use old BitBlt.
	* quartz: non png images can be drawn with transparent color again.

2005-04-29 arne

	* added CTextLabel
	* mac: the CFrame can be placed into HIScrollViews
	* mac: using static objects for Quicktime GraphicsImporter to speed up loading of images
	* mac: using CGImageCreateImageInRect on 10.4 for faster drawing of clipped images

2005-04-11 arne

	* removed CFrame::isSomethingDirty
	* added a check in CViewContainer::isDirty if the subview is inside the view container size
	* fix for overlapping views not drawn everytime
	* quartz: fix some drawing bugs

2005-03-25 arne

	* quartz: fix drawing of transparent bitmaps when OLD_TRANSPARENT_BITMAP_MODE is defined
	* fix a bug for quickdraw's CDrawContext::setClipRect
	* quartz: on composited windows, the ctextedit creates a native UnicodeTextControl instead of an MLTE Object